--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
   </header>
 
   <main>
+    <!-- プロフィール画像 -->
+    <section>
+      <h2>🖼 プロフィール画像</h2>
+      <img src="top.png" alt="プロフィール画像" width="300" />
+    </section>
+
+    <!-- 学習中の分野 -->
     <section>
       <h2>📚 学習中の分野</h2>
       <ul>
@@ -22,22 +29,24 @@
       </ul>
     </section>
 
+    <!-- プロジェクト紹介 -->
     <section>
-      <h2>📝 プロジェクト紹介</h2>
+      <h2>💻 プロジェクト紹介</h2>
       <ul>
         <li><a href="https://github.com/nori-sasa-dev/your-repo">機械学習モデルの実装</a></li>
         <li><a href="https://github.com/nori-sasa-dev/your-repo">教育アプリのプロトタイプ</a></li>
       </ul>
     </section>
 
+    <!-- 学習ノート -->
     <section>
       <h2>📒 学習ノート</h2>
-      <p>学習ログは <a href="https://github.com/nori-sasa-dev">GitHub アカウント</a> をご覧ください。</p>
+      <p>学習ログや実験コードは <a href="https://github.com/nori-sasa-dev">GitHub アカウント</a> をご覧ください。</p>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 Nori Sasagawa</p>
+    <p>&copy; 2025 Noritaka Sasagawa</p>
   </footer>
 </body>
 </html>
