--- a/index.html
+++ b/index.html
@@ -5,31 +5,81 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Nori's Portfolio</title>
   <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+      background-color: #0f1117;
+      color: #ffffff;
+      font-family: 'Segoe UI', 'Helvetica Neue', sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background-color: #1a1c22;
+      padding: 2rem;
+      text-align: center;
+      border-bottom: 1px solid #333;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2rem;
+      color: #00bcd4;
+    }
+    header p {
+      color: #ccc;
+      font-size: 1rem;
+      margin-top: 0.5rem;
+    }
+    main {
+      padding: 2rem;
+      max-width: 800px;
+      margin: auto;
+    }
+    section {
+      margin-bottom: 2rem;
+    }
+    h2 {
+      color: #00bcd4;
+      border-bottom: 1px solid #00bcd4;
+      padding-bottom: 0.5rem;
+      margin-bottom: 1rem;
+    }
+    ul {
+      list-style: square;
+      padding-left: 1.5rem;
+    }
+    a {
+      color: #4fc3f7;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    footer {
+      text-align: center;
+      padding: 1rem;
+      font-size: 0.8rem;
+      color: #777;
+      border-top: 1px solid #333;
+    }
+  </style>
 </head>
 <body>
   <header>
     <h1>Nori's Portfolio</h1>
-    <p>AI × 教育 × テニス｜ポートフォリオ＆学習記録サイト</p>
+    <p>AI × 教育 × テニス｜未来に備える学習と実践の記録</p>
   </header>
 
   <main>
-    <!-- プロフィール画像 -->
-    <section>
-      <h2>🖼 プロフィール画像</h2>
-      <img src="top.png" alt="プロフィール画像" width="300" />
-    </section>
-
-    <!-- 学習中の分野 -->
     <section>
       <h2>📚 学習中の分野</h2>
       <ul>
         <li>E資格 / G検定 / 統計検定2級</li>
         <li>Kaggle（目標：Master）</li>
         <li>教育 × テクノロジーの応用</li>
+        <li>Jupyter Notebookによる記録</li>
       </ul>
     </section>
 
-    <!-- プロジェクト紹介 -->
     <section>
       <h2>💻 プロジェクト紹介</h2>
       <ul>
@@ -38,15 +88,15 @@
       </ul>
     </section>
 
-    <!-- 学習ノート -->
     <section>
-      <h2>📒 学習ノート</h2>
-      <p>学習ログや実験コードは <a href="https://github.com/nori-sasa-dev">GitHub アカウント</a> をご覧ください。</p>
+      <h2>🧠 思索と記録</h2>
+      <p>日々の学びや教育への思索は、Markdown形式やJupyter Notebookで記録しています。  
+      <a href="https://github.com/nori-sasa-dev">GitHubアカウント</a> に随時追加予定です。</p>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 Noritaka Sasagawa</p>
+    &copy; 2025 Noritaka Sasagawa
   </footer>
 </body>
 </html>
