--- a/index.html
+++ b/index.html
@@ -1,29 +1,36 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Nori's Study Notes</title>
-  <link rel="stylesheet" href="assets/css/style.css">
-</head>
-<body>
-  <header>
-    <h1>📚 Nori's Study Notes</h1>
-    <p>AI, Data Science, and Education Journey</p>
-  </header>
+<header>
+  <h1>Nori's Portfolio</h1>
+  <p>AI × Education × Tennis | Learning and Practice for the Future</p>
+</header>
 
-  <main>
-    <section>
-      <h2>Notes</h2>
-      <ul>
-        <li>🧠 <a href="study/e-shikaku/">E-Shikaku Certification</a></li>
-        <li>🔬 <a href="study/zerodl/">Deep Learning from Scratch</a></li>
-        <li>📊 <a href="study/kaggle/">Kaggle Experiments</a></li>
-      </ul>
-    </section>
-  </main>
+<main>
+  <section>
+    <h2>📚 Areas of Study</h2>
+    <ul>
+      <li>E-Shikaku / G-Certification / Statistics</li>
+      <li>Kaggle (Goal: Master)</li>
+      <li>Applications of AI in Education</li>
+      <li>Learning records in Jupyter Notebook</li>
+    </ul>
+  </section>
 
-  <footer>
-    <p>© 2025 Nori</p>
-  </footer>
-</body>
-</html>
+  <section>
+    <h2>💻 Projects</h2>
+    <ul>
+      <li>Implementation of ML models</li>
+      <li>Prototype of an education app</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>🧠 Reflections & Notes</h2>
+    <p>
+      Daily thoughts and reflections on learning and education are recorded in Markdown and Jupyter Notebooks.
+      Updates are available on my <a href="https://github.com/nori-sasa-dev" target="_blank">GitHub account</a>.
+    </p>
+  </section>
+</main>
+
+<footer>
+  <p>© 2025 Noritaka Sasagawa</p>
+</footer>
