Add CSS styling with dark cool theme

--- a/index.html
+++ b/index.html
@@ -1,36 +1,47 @@
-<header>
-  <h1>Nori's Portfolio</h1>
-  <p>AI × Education × Tennis | Learning and Practice for the Future</p>
-</header>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Nori's Portfolio</title>
+  <link rel="stylesheet" href="assets/css/style.css">
+</head>
+<body>
+  <header>
+    <h1>Nori's Portfolio</h1>
+    <p>AI × Education × Tennis | Learning and Practice for the Future</p>
+  </header>
 
-<main>
-  <section>
-    <h2>📚 Areas of Study</h2>
-    <ul>
-      <li>E-Shikaku / G-Certification / Statistics</li>
-      <li>Kaggle (Goal: Master)</li>
-      <li>Applications of AI in Education</li>
-      <li>Learning records in Jupyter Notebook</li>
-    </ul>
-  </section>
+  <main>
+    <section>
+      <h2>📚 Areas of Study</h2>
+      <ul>
+        <li>E-Shikaku / G-Certification / Statistics</li>
+        <li>Kaggle (Goal: Master)</li>
+        <li>Applications of AI in Education</li>
+        <li>Learning records in Jupyter Notebook</li>
+      </ul>
+    </section>
 
-  <section>
-    <h2>💻 Projects</h2>
-    <ul>
-      <li>Implementation of ML models</li>
-      <li>Prototype of an education app</li>
-    </ul>
-  </section>
+    <section>
+      <h2>💻 Projects</h2>
+      <ul>
+        <li>Implementation of ML models</li>
+        <li>Prototype of an education app</li>
+      </ul>
+    </section>
 
-  <section>
-    <h2>🧠 Reflections & Notes</h2>
-    <p>
-      Daily thoughts and reflections on learning and education are recorded in Markdown and Jupyter Notebooks.
-      Updates are available on my <a href="https://github.com/nori-sasa-dev" target="_blank">GitHub account</a>.
-    </p>
-  </section>
-</main>
+    <section>
+      <h2>🧠 Reflections & Notes</h2>
+      <p>
+        Daily thoughts and reflections on learning and education are recorded in Markdown and Jupyter Notebooks.
+        Updates are available on my
+        <a href="https://github.com/nori-sasa-dev" target="_blank">GitHub account</a>.
+      </p>
+    </section>
+  </main>
 
-<footer>
-  <p>© 2025 Noritaka Sasagawa</p>
-</footer>
+  <footer>
+    <p>© 2025 Noritaka Sasagawa</p>
+  </footer>
+</body>
+</html>
