Add reading notes link to inner_game.md

--- a/index.html
+++ b/index.html
@@ -38,6 +38,18 @@
         <a href="https://github.com/nori-sasa-dev" target="_blank">GitHub account</a>.
       </p>
     </section>
+
+    <section>
+      <h2>📘 Reading Notes</h2>
+      <ul>
+        <li>
+          <a href="https://github.com/nori-sasa-dev/nori-sasa-dev.github.io/blob/main/study/books/inner_game.md" target="_blank">
+            『The Inner Game of Tennis』 by W. T. Gallwey
+          </a>
+        </li>
+      </ul>
+    </section>
+    
   </main>
 
   <footer>
