Update Reading Notes links: add The Sense of Wonder and Nexus

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </header>
 
   <main>
-    <section>
+    <section class="card">
       <h2>📚 Areas of Study</h2>
       <ul>
         <li>E-Shikaku / G-Certification / Statistics</li>
@@ -22,7 +22,7 @@
       </ul>
     </section>
 
-    <section>
+    <section class="card">
       <h2>💻 Projects</h2>
       <ul>
         <li>Implementation of ML models</li>
@@ -30,7 +30,7 @@
       </ul>
     </section>
 
-    <section>
+    <section class="card">
       <h2>🧠 Reflections & Notes</h2>
       <p>
         Daily thoughts and reflections on learning and education are recorded in Markdown and Jupyter Notebooks.
@@ -39,7 +39,7 @@
       </p>
     </section>
 
-    <section>
+    <section class="card">
       <h2>📘 Reading Notes</h2>
       <ul>
         <li>
@@ -47,9 +47,23 @@
             『The Inner Game of Tennis』 by W. T. Gallwey
           </a>
         </li>
+        <li>
+          <a href="https://github.com/nori-sasa-dev/nori-sasa-dev.github.io/blob/main/study/books/sense_of_wonder.md" target="_blank">
+            『The Sense of Wonder』 by Rachel Carson
+          </a>
+        </li>
+        <li>
+          <a href="https://github.com/nori-sasa-dev/nori-sasa-dev.github.io/blob/main/study/books/nexus.md" target="_blank">
+            『Nexus』 by Yuval Noah Harari
+          </a>
+        </li>
       </ul>
+      <p>
+        These notes are reflections and insights from books I’ve read related to education, psychology, AI, and coaching.<br>
+        They serve as a knowledge base for building future learning programs.
+        All notes are maintained in Markdown and can be accessed on GitHub.
+      </p>
     </section>
-    
   </main>
 
   <footer>
